k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fidesorigin
  labels:
    name: fidesorigin
    app.kubernetes.io/part-of: fidesorigin
