k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fidesorigin-data-publisher
  namespace: fidesorigin
  labels:
    app: fidesorigin-data-publisher
spec:
  type: ClusterIP
  selector:
    app: fidesorigin-data-publisher
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
